[build-system]
requires = ["setuptools>=46.4.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CoutureCypher"
version = "0.0.2"
authors = [
  { name="Dominic Couture", email="d.paul.couture@gmail.com" },
]
description = "A Cypher"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mastermind-mayhem/CoutureCypher"